src/objects/KPI_Calculation_Formula__c.object
<CustomObject>
    <fields>
        <fullName>KPI_Expression__c</fullName>
        <label>KPI Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>KPI External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Formula__c</fullName>
        <label>KPI Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI Calculation Formula</relationshipLabel>
        <relationshipName>KPI_Calculation_Formula</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>KPI Calculation Formula</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Calculation Formula</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>